Prints more info about closest (L1) colour

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ test2.cydsn/CortexM3/
 test2.cydsn/Export/
 test2.cydsn/Generated_Source/
 test2.cydsn/BUILD.log
+test2.cydsn/CLEAN.log
 test2.cydsn/test2.cyprj.hersh
 test2.cydsn/test2.cyprj.hnevg
 test2.cywrk.hersh
