--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,5 @@
 */Generated_Source/
 */BUILD.log
 */CLEAN.log
-*/*.cyprj.hersh
-*/*.cyprj.hnevg
-*.cywrk.hersh
-*.cywrk.hnevg
+*/*.cyprj.*
+*.cywrk.*
